--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(sonar_scanner_example)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(sonar_scanner_example cares_wrap.cc)
+add_executable(sonar_scanner_example src/node_main.cc)
